added persistent extra settings (#147)

--- a/ankimorphs/ui/generator_output_dialog.ui
+++ b/ankimorphs/ui/generator_output_dialog.ui
@@ -20,9 +20,9 @@
       <number>15</number>
      </property>
      <item>
-      <widget class="QPushButton" name="selectFolderPushButton">
+      <widget class="QPushButton" name="selectFilePushButton">
        <property name="text">
-        <string>Select folder</string>
+        <string>Select File</string>
        </property>
       </widget>
      </item>
